# Tutorials

./: README.md
ClusterMasses/: README.md  TFP_mass_estimate.ipynb  UnderstandingLossFunctions.ipynb
GenerativeModels/: GalaxyMorphologyGAN.ipynb  GalaxyMorphologyVAE.ipynb  GalaxyMorphologyVAE_solution.ipynb  IntroToVAE.ipynb
GenerativeModels/hsc_photoz/: hsc_photoz.py
InverseProblems/: DeepInverseProblemsTutorial.ipynb  DeepInverseProblemsTutorial_solution.ipynb
PhotozCNN/: README.md  cnn_photoz_inference.ipynb  photoz_inference_data_preparation.ipynb  photoz_inference_tfdatasets.ipynb  photoz_inference_training_exercise.ipynb  photoz_inference_training_solution.ipynb
PhotozCNN/hsc_photoz/: __init__.py  hsc_photoz.py
PythonC++/: Bonjour.hpp  CMakeLists.txt  README.md  filter.cpp  filter.hpp  filterlib.cpp  mylib.cpp  pylib.cpp  pylib_auto.cpp  pylib_generator.py
PythonC++/cmake/Modules/: BuildBoost.cmake
TimeSeries/: QuasarLightcurvesLSTM.ipynb  QuasarLightcurvesLSTM_solution.ipynb  README.md
